# sensor_measurements_monitoring

./: README.md  docker-compose.yaml
gms/: README.md
gms/api/docker/: main.go
sensors_data_producer/: Makefile  README.md  producer.py  pyproject.toml
sensors_data_producer/docker/: Dockerfile
sensors_data_producer/sensors/: __init__.py  abstract.py
sensors_data_producer/sensors/enums/: location.py  sensor_state.py  sensor_type.py  unit.py
sensors_data_producer/sensors/security/: __init__.py  base.py  glass_break.py  light.py  magnetic.py  motion.py  pressure.py  smart_lock.py  vibration.py
sensors_data_producer/sensors/weather/: anemometer.py  barometric_pressure.py  base.py  humidity.py  rain.py  solar_radiation.py  temperature.py  uv.py  visibility.py
smp/: Makefile  producer.py  pyproject.toml
smp/docker/: Dockerfile
smp/sensors/: __init__.py  abstract.py
smp/sensors/enums/: location.py  unit.py
smp/sensors/security/: base.py  glass_break.py  light.py  magnetic.py  motion.py  pressure.py  smart_lock.py  vibration.py
smp/sensors/weather/: __init__.py  anemometer.py  barometric_pressure.py  base.py  humidity.py  rain.py  solar_radiation.py  temperature.py  uv.py  visibility.py
wms/: README.md
