[tool.poetry]
name = "sensor_measurements_monitoring"
version = "0.1.0"
description = "A project for monitoring sensor measurements"
authors = ["Nikita Limarchuk <nikita.limarchuk@gmail.com>"]
license = "MIT"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[project]
name = "sensors_data_producer"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Limarchuk",email = "nikita.limarchuk@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka (>=2.10.1,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist"]