[project]
name = "smp"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Limarchuk",email = "nikita.limarchuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka (>=2.10.1,<3.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
